# mutator

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  setup.cfg  startup.sh
.github/: dependabot.yml
alembic/: env.py
alembic/versions/: 09b34a6c797a_table_structure.py
docs/: api-reference.md  documentation.md
src/common/: test_configuration.py  test_run_dto.py
src/common/config/: logging.ini
src/common/database/: database_utils.py  result.py  test_run.py  validation_result.py
src/common/state/: state_descriptions.py  states.py
src/common/test_result/: test_result.py
src/manager/: __init__.py  app.py
src/manager/common/: error_handlers.py
src/manager/common/utils/: encoding.py
src/manager/common/validate_request/: request_validation.py  request_validator.py
src/manager/config/: config.ini  reports.json
src/mutator/: consumer.py  producer.py  worker_loop.py
src/mutator/background_jobs/locking/: refresh_lock.py
src/mutator/background_jobs/monitors/: test_run_state.py
src/mutator/common/test_value_storage/: test_repository.py
src/mutator/common/utils/: hash.py
src/mutator/config/: config.ini  validator_config.json
src/mutator/generator/: generator.py  test.py  test_types.py
src/mutator/runner/: hash_strategy.py  test_runner.py
src/mutator/runner/request/: generic_request.py
tests/: test_generator.py  test_regression.py  test_response_code.py  test_test_run_service.py  test_test_runner.py  test_worker_loop.py
tests/config/: test_config.json
tests/config/test_repository/: int_tests  remove_tests
(+38 files in other folders)
